[build-system]
requires= ["hatchling", "Pillow"]
build-backend = "hatchling.build"

[project]
name = "mazemastery"
version = "1.0.2"
description = "MazeMastery is a Python framework for teaching maze traversal to high school students. It helps students develop abstraction skills by providing a didactic tool. They can test their algorithms against randomized test cases of increasing complexity. The framework facilitates learning analysis and conceptual challenges. MazeMastery is an open-source project for scientists and educators."
authors = [
    {name="Raphaël Baur", email="rabaur@ethz.ch"},
    {name="Jens Hartmann", email="s4jehart@uni-trier.de"},
    {name="Jaqueline Staub", email="staub@uni-trier.de"},
]
dependencies = [
    "Pillow",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rabaur/MazeMastery"


[tool.hatch.build.targets.wheel.force-include]
"./sprites" = "pkg"